# choco-ml

./: .gitmodules  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
frontend/: Cargo.toml
frontend/src/: lexer.rs  lib.rs
ir/: Cargo.toml
ir/src/: cfg.rs  lib.rs  ssa.rs
passes/: Cargo.toml
passes/src/: constant_folding.rs  constant_propagate.rs  deadcode_removal.rs  lib.rs  liveness.rs  pass_manager.rs
riscv-backend/: Cargo.toml
riscv-backend/src/: instruction_sel.rs  lib.rs  machine_ir.rs  register_alloc.rs  riscv_emission.rs
tests/: concept.py  simple_test.py
